# softflight

./: CMakeLists.txt  LICENSE  README.md  softflight.ini
src/: fdm.c  fdm.h  log.h  main.c  math.h  platform.h  platform_sdl.c  raster.c  renderer.c  renderer.h  sim.c  sim.h  terrain.c  terrain.h  util.h
tests/: test_fdm.c  test_math.c  test_raster.c
